2005-12-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	** Fixes the bug #316897

	* evolution-mail-message.xml: Removed MoveToFolder and CopyToFolder
	from the evolution tool bar to make it small.

2005-12-13  David Malcolm  <dmalcolm@redhat.com>

	* evolution-mail-message.xml: Add ellipsis characters to various menu
	items that are commands/actions requiring further user interaction,
	fixing bug #323951

2005-12-03  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-mail-message.xml: Properly renamed Reply to All, adding
	the menu shortkey back, fixing bug #323108.

2005-12-07  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* evolution-message-composer.xml: Add menu item for prioritising
	message

2005-11-22  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-mail-message.xml: Re-established sane Reply* menu order,
	fixes bug #321639.

	Committing patch on behalf of guenther. - partha

2005-11-22  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-mail-message.xml: Re-added the ForwardAs submenu,
	fixes regression bug #321640.
	
	Committed on behalf of Karsten, since he does not have commit
	rights.

2005-11-18  Chenthill Palanisamy  <pchenthill@novell.com>

	* evolution-event-editor.xml: Removed the timezone
	entry from the toolbar.

2005-11-16  Chenthill Palanisamy  <pchenthill@novell.com>

	* evolution-event-editor.xml: Removed the view attendee
	from menu bar and corrected the recurrence spelling.
	* Makefile.am:
	* evolution-task-editor.xml: Added the file for task
	editor.

2005-11-14  Srinivasa Ragavan <sragavan@novell.com>

	* Makefile.am: Added two ui files evolution-editor.xml
	and evolution-event-editor.xml.

2005-11-10  Sankar P  <psankar@novell.com>

	* evolution-mail-message.xml: added keyboard accelerators for 
	NextMessage and PreviousMessage.
	Fixes #302974

2005-10-19 Harish Krishnaswamy <kharish@novell.com>

	Committing for Nathan Owens <pianocomp81@yahoo.com>
