@@ -1,3 +1,12 @@
+2005-12-16  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fixes bugs #322499 and #227853
+
+	* evolution-addressbook.xml: Modified shortcut for preview
+	* evolution-mail-global.xml: Modified shortcut for preview
+	* evolution-tasks.xml: Modified shortcut for preview
+	* evolution.xml: Removed Shortcut to hide status bar.
+
 2005-12-14  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>
 
 	** Fixes the bug #316897
